# max-paulstretch

./: .clang-format  CMakeLists.txt  README-public.md  README.md  justfile  mise.toml  package-info.json  package-info.json.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
docs/: mc.paulstretch~.maxref.xml  paulstretch.stream~.maxref.xml  paulstretch~.maxref.xml
extras/: paulstretch.maxpat
help/: paulstretch.stream~.maxhelp  paulstretch~.maxhelp
init/: paulstretch-objectmappings.txt
source/common/: envelopes.h  paulstretch_engine.h  process_attrs.h  pstretch_shared.h
source/paulstretch.stream_tilde/: CMakeLists.txt  paulstretch.stream_tilde.cpp
source/paulstretch_tilde/: CMakeLists.txt  paulstretch_tilde.cpp
